# Robotica

QTimerCountdown/: counterDlg.ui  ejemplo1.cpp  ejemplo1.h
Tarea3/forcefield/: CMakeCache.txt  Makefile  cmake_install.cmake
Tarea3/forcefield/src/: Makefile  cmake_install.cmake  robot.cpp  specificworker.cpp  specificworker.h
Tarea3/forcefield/src/forcefield_autogen/EWIEGA46WW/: moc_genericmonitor.cpp.d  moc_genericworker.cpp.d  moc_specificmonitor.cpp.d  moc_specificworker.cpp.d
Tarea3/forcefield/src/forcefield_autogen/I3FNLAJYSS/: moc_abstract_graphic_viewer.cpp.d
Tarea3/forcefield/src/forcefield_autogen/include/: moc_sigwatch.cpp.d
ejemplo1/: counterDlg.ui  ejemplo1.cpp  ejemplo1.h
ejemploQTimer/: counterDlg.ui  ejemplo1.cpp  ejemplo1.h
tarea2/control/: CMakeCache.txt  Makefile  cmake_install.cmake  control.cdsl
tarea2/control/src/: Makefile  cmake_install.cmake  specificworker.cpp
tarea2/control/src/control_autogen/EWIEGA46WW/: moc_genericmonitor.cpp.d  moc_genericworker.cpp.d  moc_specificmonitor.cpp.d  moc_specificworker.cpp.d
tarea2/control/src/control_autogen/include/: moc_sigwatch.cpp.d
tarea2multi/: CMakeLists.txt
tarea2multi/control/: CMakeCache.txt  Makefile  cmake_install.cmake  control.cdsl
tarea2multi/control/etc/: config.new
tarea2multi/control/src/: DifferentialRobotMulti.cpp  DifferentialRobotMulti.h  LaserMulti.cpp  LaserMulti.h  Makefile  cmake_install.cmake  specificworker.cpp  specificworker.h
tarea2multi/control/src/control_autogen/EWIEGA46WW/: moc_genericmonitor.cpp.d  moc_genericworker.cpp.d  moc_specificmonitor.cpp.d  moc_specificworker.cpp.d
tarea2multi/control/src/control_autogen/include/: moc_sigwatch.cpp.d
tarea3/: control.cdsl
